# ohcommodore

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  ohcommodore  pyproject.toml
.claude/: hookify.prefer-cli-destroy.local.md  hookify.use-uv-run.local.md
.claude/skills/: oh-commodore.md
.claude/skills/voyage-plan/: SKILL.md  dag_analyzer.py
.github/workflows/: ci.yml  claude.yml  release.yml
cloudinit/: init.sh
docs/plans/: 2026-01-19-ohcommodore-design.md  2026-01-19-ohcommodore-implementation.md  2026-01-20-ohcommodore-v2-queue-system.md  2026-01-21-container-model-ships.md  2026-01-22-email-messaging-design.md  2026-01-22-email-messaging-impl.md  2026-01-25-pre-created-tasks-design.md
examples/generated-plans/multilingual-readme/: spec.md  verify.sh  voyage.json
examples/generated-plans/react-hello-world/: spec.md  verify.sh  voyage.json
scripts/: e2e-test.sh  install.sh
src/ocaptain/: __init__.py  __main__.py  cli.py  config.py  logs.py  mutagen.py  provider.py  secrets.py  ship.py  tasks.py  tmux.py  voyage.py  zellij.py
src/ocaptain/providers/: __init__.py  boxlite.py  exedev.py  sprites.py
src/ocaptain/scripts/: start-telemetry.sh  stop-telemetry.sh
src/ocaptain/templates/: on_stop.sh  (+3 more)
tests/: __init__.py  clean-env.sh  conftest.py  run_integration.sh  test_boxlite.py  test_config.py  test_logs.py  test_mutagen.py  test_sprites.py  test_tasks.py  test_voyage.py
tests/integration/: test_fleet_lifecycle.sh  test_messaging.sh  test_v2_queue.sh
tests/lib/: test_helpers.sh
(+26 files in other folders)
