[project]
name = "ocaptain"
version = "0.0.2"
description = "Minimal control plane for multi-VM Claude Code orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Clay Smith" }]
keywords = ["claude", "orchestration", "autonomous-agents"]

dependencies = [
    "fabric>=3.2,<4",
    "typer>=0.12,<1",
    "rich>=13.0,<14",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
boxlite = ["boxlite>=0.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=4.0",
]

[project.scripts]
ocaptain = "ocaptain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocaptain"]

[tool.hatch.build.targets.sdist]
include = ["src/ocaptain/**/*.sh"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "fabric.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boxlite.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)
